[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weall-protocol"
version = "0.1.0"
description = "WeAll Protocol backend node"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27",
  "gunicorn>=21.2",
  "cryptography>=41",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "httpx>=0.27",
]
lock = [
  "pip-tools>=7.4",
]
ci = [
  "ruff>=0.6.9",
  "pip-audit>=2.7.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501", # line length handled separately
  "E402", # repo intentionally uses late imports in some runtime/script modules
  "B008", # FastAPI File()/Form() defaults are part of the API contract
  "B904", # preserve existing exception wrapping style for operator diagnostics
]

[tool.ruff.lint.isort]
known-first-party = ["weall"]

[tool.ruff.lint.per-file-ignores]
"src/weall/ledger/migrations.py" = ["UP006", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
